--- a/essentials/markdown.mdx
+++ b/essentials/markdown.mdx
@@ -20,6 +20,15 @@ Best use to subsection headers.
 ### Subtitles
 ```
 
+<Columns cols={2}>
+  <Card title="First Card">
+    Neque porro quisquam est qui dolorem ipsum quia dolor sit amet
+  </Card>
+  <Card title="Second Card">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit
+  </Card>
+</Columns>
+
 <Tip>
 
 Each **title** and **subtitle** creates an anchor and also shows up on the table of contents on the right.
