--- a/start/migration.mdx
+++ b/start/migration.mdx
@@ -1,9 +1,9 @@
 ---
 title: Migration auf die 123Hundeschule Software
-description:
+sidebarTitle: Migration
+icon: "transporter"
+description: Die Umstellung auf ein neues System kann eine Herausforderung sein. Mit der 123Hundeschule Software möchten wir Dir den Übergang so einfach und reibungslos wie möglich gestalten. In dieser Anleitung erfährst Du Schritt für Schritt, wie Du Kundendaten, Kurse und Mitarbeiter aus Deinem bisherigen System oder manuellen Aufzeichnungen in unsere Software überträgst. Dabei gehen wir sowohl auf den Datenimport als auch auf die Einrichtung der wichtigsten Funktionen wie Gruppen, Kurse und Mehrfachkarten ein. Außerdem geben wir Dir hilfreiche Tipps, wie Du den Migrationsprozess optimieren und Kundenfragen gezielt bearbeiten kannst.
 ---
-
-Die Umstellung auf ein neues System kann eine Herausforderung sein. Mit der 123Hundeschule Software möchten wir Dir den Übergang so einfach und reibungslos wie möglich gestalten. In dieser Anleitung erfährst Du Schritt für Schritt, wie Du Kundendaten, Kurse und Mitarbeiter aus Deinem bisherigen System oder manuellen Aufzeichnungen in unsere Software überträgst. Dabei gehen wir sowohl auf den Datenimport als auch auf die Einrichtung der wichtigsten Funktionen wie Gruppen, Kurse und Mehrfachkarten ein. Außerdem geben wir Dir hilfreiche Tipps, wie Du den Migrationsprozess optimieren und Kundenfragen gezielt bearbeiten kannst.
 
 Diese Dokumentation ist Dein Leitfaden für eine erfolgreiche und stressfreie Systemumstellung.
 
